Fix submenu vertical line incorrectly placed on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -214,6 +214,9 @@ main {
 	#app-header .navbar-nav .nav-link {
 		padding: 0.6rem 1rem;
 	}
+	.nav-item .submenu {
+		margin-left: 1.5rem;
+	}
 }
 
 /* MOBILE TAP BAR */
